refactor: update services to use domain records and persistence ports